feat: Improve design, add icons

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,15 +1,17 @@
-<h1>Über uns</h1>
+<h1 class="large header">Über uns</h1>
 
-<p class="small">
+<img class="center" src="assets/images/meister.jpg">
+
+<p class="normal">
   Der Hobbyfußballverein <span class = "bold">Textildruckprofi Stainz</span> (kurz <span class = "bold">HV TDP Stainz</span>) wurde im Jahr 2014 gegründet.
   Aus einem Gespräch bei einem kühlen blonden Erfrischungsgetränk zwischen Daniel Fabian und Eduard Orthaber entsprang die Idee einer Gründung eines Hobbyvereines. 
 </p>
 
-<p class="small">
+<p class="normal">
   Diese Idee wurde von den beiden auch in die Tat umgesetzt. 
   Neben den Gründungsmitgliedern schlossen sich einige weitere ehemalige Fußballer dem Verein an und so entstand ein Team aus vielen heimischen Kickern, die ihrem Hobby nachgehen.
 </p>
-<p class="small">
+<p class="normal">
   Im Vereinsnamen befindet sich auch der Name unseres Hauptsponsors, der Firma „Textildruckprofi“ aus Deutschlandsberg. 
   Seit der Gründung spielt der Verein in der Hobbyliga „Süd-Weststeirercup“ mit. Mittlerweile steht der Verein bei 3 Meistertiteln und einem Vizemeistertitel. Gespielt und trainiert wird im Stadion Stainz.
 </p>
@@ -17,15 +19,17 @@
 <h2 class="large">Unsere größten Erfolge (Stand Sommer 2018):</h2>
 
 <ul class="small">
-  <li>Meister Süd-Weststeirercup (2015, 2016, 2018)</li>
-  <li>1x Vizemeister Süd-Weststeirercup (2017)</li>
-  <li>2x Turniersieger des Hobbyhallenmasters in Leibnitz (2015, 2016)</li>
-  <li>Testspielerfolg gegen die Kampfmannschaft des SC Stainz (2015)</li>
-  <li>Testspiel gegen den FC Red Bull Salzburg (2017)</li>
-  <li>Stammtischcup Finaltag (2018)</li>
+  <li><span class="fa fa-dice-three fa-sm"></span> 3x Meister Süd-Weststeirercup (2015, 2016, 2018)</li>
+  <li><span class="fa fa-dice-two fa-sm"></span> 2x Turniersieger des Hobbyhallenmasters in Leibnitz (2015, 2016)</li>
+  <li><span class="fa fa-dice-one fa-sm"></span> 1x Vizemeister Süd-Weststeirercup (2017)</li>
+  <li><span class="fa fa-medal fa-sm"></span> Testspielerfolg gegen die Kampfmannschaft des SC Stainz (2015)</li>
+  <li><span class="fa fa-archway fa-sm"></span> Testspiel gegen den FC Red Bull Salzburg (2017)</li>
+  <li><span class="fa fa-futbol fa-sm"></span> Stammtischcup Finaltag (2018)</li>
 </ul>
 
-<p class="small">
+<br>
+
+<p class="normal">
   Seit Dezember 2017 ist der HV TDP Stainz auch ein gemeldeter Verein.
   <br>
   Unser Vorstand setzt sich zusammen aus:
