--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,19 +9,20 @@
 
   <div fxFlex="100%" fxFlex.gt-sm="45%">
     <div style="text-align:center">
-      <a md-icon-button class="btn-facebook" href="https://www.facebook.com/hvtdpstainz/" target="_blank"><i class="fa fa-facebook fa-lg"></i></a>
-      <a md-icon-button class="btn-twitter" href="https://twitter.com/HvStainz/" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
-      <a md-icon-button class="btn-instagram" href="https://www.instagram.com/hvtdpstainz_2014/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a>
-      <a md-icon-button class="btn-mail" href="mailto:hvtdpstainz@gmx.at"><i class="fa fa-envelope-o fa-lg"></i></a>
+      <a md-icon-button class="btn-facebook" href="https://www.facebook.com/hvtdpstainz/" target="_blank"><i class="fab fa-facebook fa-lg"></i></a>
+      <a md-icon-button class="btn-twitter" href="https://twitter.com/HvStainz/" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
+      <a md-icon-button class="btn-instagram" href="https://www.instagram.com/hvtdpstainz_2014/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+      <a md-icon-button class="btn-mail" href="mailto:hvtdpstainz@gmx.at"><i class="fab fa-envelope-o fa-lg"></i></a>
     </div>
   </div>
   <div fxFlex="100%" fxFlexAlign="center center">
     <br>
+
     <a href="http://www.textildruckprofi.com/" target="blank">
       <img class="imageSmallCenter" src="assets/images/tdp.jpg" width="10%">
     </a>
     <div style="text-align:center;">
-      <p>© Copyright 2018 Stefan Jaindl</p>
+      <p>© 2018 Stefan Jaindl & Daniel Fabian</p>
     </div>
   </div>
 </div>
