--- a/src/app/membership/membership.component.html
+++ b/src/app/membership/membership.component.html
@@ -3,7 +3,7 @@
 </h1>
 
 <p class="normal">
-    Werde aktives oder förderndes Mitglied vom 1. HVTDP Stainz.
+    Werde aktives oder förderndes Mitglied vom HV TDP Stainz.
 </p>
 
 <p class="normal">
