--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,8 +8,8 @@
 }
 
 .items {
-    min-width:900;
-    max-width:900;
+    min-width:300;
+    max-width:300;
     align-content: center
     /* height:400px; */
     /* background:#ECECEC; */
@@ -19,7 +19,6 @@
 	margin: 30px;
 	width: 100%;
 	z-index: 11;
-
 }
 
 img {
@@ -93,9 +92,10 @@ img {
     height: 4rem;
     background-color: rgba(0, 0, 0, 0.9);
     padding-left: 100%;
-	box-sizing: content-box;
-	z-index: 8;
+    box-sizing: content-box;
+    z-index: 8;
   }
+
   .ticker-wrap .ticker {
     display: inline-block;
     height: 4rem;
@@ -126,7 +126,16 @@ img {
   h1, h2, p {
     padding: 0 5%;
   }
-  
+
+  .logo {
+    position: fixed;
+    top: 22%;
+    left: 1%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    }
+
   /* Social */
 
   .icon-bar {
