feat: Finish AboutComponent

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -22,7 +22,7 @@
       <img class="imageSmallCenter" src="assets/images/tdp.jpg" width="10%">
     </a>
     <div style="text-align:center;">
-      <p>© 2018 Stefan Jaindl & Daniel Fabian</p>
+      <p>© 2018 Stefan Jaindl</p>
     </div>
   </div>
 </div>
