--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,20 +1,28 @@
 <h1 class="large header">Über uns</h1>
 
-<img class="center" src="assets/images/meister.jpg">
+<div fxFlex>
+    <div fxLayout="column" fxLayout.gt-sm="row">
+        <div fxFlex="50" fxFlexOffset="10px">
 
-<p class="normal">
-  Der Hobbyfußballverein <span class = "bold">Textildruckprofi Stainz</span> (kurz <span class = "bold">HV TDP Stainz</span>) wurde im Jahr 2014 gegründet.
-  Aus einem Gespräch bei einem kühlen blonden Erfrischungsgetränk zwischen Daniel Fabian und Eduard Orthaber entsprang die Idee einer Gründung eines Hobbyvereines. 
-</p>
+          <p class="normal">
+            Der Hobbyfußballverein <span class = "bold">Textildruckprofi Stainz</span> (kurz <span class = "bold">HV TDP Stainz</span>) wurde im Jahr 2014 gegründet.
+            Aus einem Gespräch bei einem kühlen blonden Erfrischungsgetränk zwischen Daniel Fabian und Eduard Orthaber entsprang die Idee einer Gründung eines Hobbyvereines. 
+          </p>
 
-<p class="normal">
-  Diese Idee wurde von den beiden auch in die Tat umgesetzt. 
-  Neben den Gründungsmitgliedern schlossen sich einige weitere ehemalige Fußballer dem Verein an und so entstand ein Team aus vielen heimischen Kickern, die ihrem Hobby nachgehen.
-</p>
-<p class="normal">
-  Im Vereinsnamen befindet sich auch der Name unseres Hauptsponsors, der Firma „Textildruckprofi“ aus Deutschlandsberg. 
-  Seit der Gründung spielt der Verein in der Hobbyliga „Süd-Weststeirercup“ mit. Mittlerweile steht der Verein bei 3 Meistertiteln und einem Vizemeistertitel. Gespielt und trainiert wird im Stadion Stainz.
-</p>
+          <p class="normal">
+            Diese Idee wurde von den beiden auch in die Tat umgesetzt. 
+            Neben den Gründungsmitgliedern schlossen sich einige weitere ehemalige Fußballer dem Verein an und so entstand ein Team aus vielen heimischen Kickern, die ihrem Hobby nachgehen.
+          </p>
+          <p class="normal">
+            Im Vereinsnamen befindet sich auch der Name unseres Hauptsponsors, der Firma „Textildruckprofi“ aus Deutschlandsberg. 
+            Seit der Gründung spielt der Verein in der Hobbyliga „Süd-Weststeirercup“ mit. Mittlerweile steht der Verein bei 3 Meistertiteln und einem Vizemeistertitel. Gespielt und trainiert wird im Stadion Stainz.
+          </p>
+        </div>
+        <div fxFlex="50" fxFlexOffset="10px">
+            <img class="center" src="assets/images/meister.jpg">
+        </div>
+     </div>
+  </div>
  
 <h2 class="large">Unsere größten Erfolge (Stand Sommer 2018):</h2>
 
@@ -35,11 +43,14 @@
   Unser Vorstand setzt sich zusammen aus:
 </p>
 
-<ul class="small">
-  <li>Daniel FABIAN (Obmann)</li>
-  <li>Philipp BOHACEK (Obmann Stellvertreter)</li>
-  <li>Mario KÜGERL (Kassier)</li>
-  <li>Robert RONEGG (Kassier Stellvertreter)</li>
-  <li>Stefan JAINDL (Schriftführer)</li>
-  <li>Eduard ORTHABER (Schriftführer Stellvertreter)</li>
-</ul>
+<div fxFlex>
+    <div fxLayout="column" fxLayout.gt-sm="row">
+        <mat-list>
+          <mat-list-item *ngFor="let chef of chefs" style="float: left; margin-bottom: 75px;">
+            <img mat-list-avatar class='img-preview' src="{{chef.imagePath}}" alt="{{chef.firstName}} {{chef.lastName | uppercase}}" >
+            <h1 mat-line>{{chef.firstName}} {{chef.lastName | uppercase}}</h1>
+            <h1 mat-line>{{chef.function}}</h1>
+          </mat-list-item>
+        </mat-list>
+    </div>
+</div>
