--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -45,12 +45,12 @@
 
 <div fxFlex>
     <div fxLayout="column" fxLayout.gt-sm="row">
-        <mat-list>
-          <mat-list-item *ngFor="let chef of chefs" style="float: left; margin-bottom: 75px;">
-            <img mat-list-avatar class='img-preview' src="{{chef.imagePath}}" alt="{{chef.firstName}} {{chef.lastName | uppercase}}" >
-            <h1 mat-line>{{chef.firstName}} {{chef.lastName | uppercase}}</h1>
-            <h1 mat-line>{{chef.function}}</h1>
-          </mat-list-item>
-        </mat-list>
+      <mat-list>
+        <mat-list-item class="listImage" *ngFor="let chef of chefs">
+          <img mat-list-avatar class='img-preview' src="{{chef.imagePath}}" alt="{{chef.firstName}} {{chef.lastName | uppercase}}" >
+          <h1 mat-line>{{chef.firstName}} {{chef.lastName | uppercase}}</h1>
+          <h1 mat-line>{{chef.function}}</h1>
+        </mat-list-item>
+      </mat-list>
     </div>
-</div>
+  </div>
