--- a/src/app/donations/donations.component.html
+++ b/src/app/donations/donations.component.html
@@ -1,21 +1,52 @@
-<h1 class="large header">
-    Matchballspenden
-</h1>
+<div *ngIf="!selectedDonation">
 
-<p class="normal">
-    Wir sagen herzlichen Dank für die Unterstützung des Hobbyverein TDP Stainz durch Matchballspenden. 
-    Durch Förderung bzw. Unterstützung ist es dem Verein möglich, einen reibungslosen Spielbetrieb aufrecht zu erhalten.
-</p>
+    <h1 class="large header">
+        Matchballspenden
+    </h1>
 
-<div *ngFor="let donation of donations">
-    <p class="large">
-        {{donation.date}}
-    </p>
     <p class="normal">
-        {{donation.description}}
+        Wir sagen herzlichen Dank für die Unterstützung des Hobbyverein TDP Stainz durch Matchballspenden. 
+        Durch Förderung bzw. Unterstützung ist es dem Verein möglich, einen reibungslosen Spielbetrieb aufrecht zu erhalten.
     </p>
-    <img class="center" src="{{donation.imagePath}}" alt={{donation.donator}}>
+
+    <br>
+    <br>
+    <br>
 </div>
 
+<div fxFlex *ngIf="!selectedDonation">
+    <div fxLayout="column" fxLayout.gt-sm="row">
+        <mat-list>
+        <mat-list-item class="matchballListImage" *ngFor="let donation of donations">  
+            
+            <img matListAvatar class='matchball-preview' src="{{donation.matchBallImagePath}}" alt="{{donation}}" (click)="selectDonation(donation)">
+            <br>
+            <h1 style="font-size:xx-large;font-weight:bold;" matLine>{{donation.date}}</h1>
+            <h1 style="font-size:x-large;" matLine>{{donation.donator}}</h1>
+            <h1 style="font-size:x-large;" matLine>{{donation.match}}</h1>
+
+        </mat-list-item>
+        </mat-list>
+    </div>
+</div>
+
+<div *ngFor="let donation of donations">
+    <div *ngIf="selectedDonation == donation">
+        <p class="large">
+            {{donation.date}}, {{donation.match}}
+        </p>
+        <img class="center" style="width: 25vw;" src="{{donation.imagePath}}" alt="{{donation.donator}}" (click)="back()">
+
+        <p class="normal">
+            {{donation.description}}
+        </p>
+
+        <button style="margin-left: 15px; font-size: 20px" mat-button class="background-primary" (click)="back()">Zurück zur Übersicht</button>
+
+    </div>
+</div>
+
+
 <br>
 <br>
+
