--- a/src/app/socialmedia/socialmedia.component.html
+++ b/src/app/socialmedia/socialmedia.component.html
@@ -2,6 +2,10 @@
     Videos
 </h1>
 
+<p class="normal">
+    Für unsere Fans haben wir alle Tore archiviert. Wähle eine Saison und verpasse kein einziges HV TDP-Tor!
+</p>
+
 <div fxFlex *ngIf="!selectedSeason">
     <div fxLayout="column" fxLayout.gt-sm="row">
         <mat-list>
